@@ -1,0 +1,29 @@
+<h1>KPOP界大事！BLACKPINK舞蹈視頻破17億、BOYNEXTDOOR登榜告示牌、GFriend重聚出道十周年</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QcuREqvV1I8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>YG娛樂宣佈，BLACKPINK的舞蹈視頻《How You Like That》在YouTube上的觀看次數已經突破17億，成為該組合首個舞蹈視頻達到此成就，也是第四個視頻總共。</p>
+<p>該視頻是2020年夏季主打歌，前一天在平台上突破13億觀看次數，成為該組合第六個達到此成就的視頻。</p>
+<p>《How You Like That》是首張完整專輯《The Album》的主打歌，並登上了美國告示牌單曲榜第59位，而專輯則登上了告示牌二百大專輯榜第2位。</p>
+<p>與此同時，該公司告訴粉絲，BLACKPINK將在明年回歸並舉辦世界巡演。成員Jennie作為獨唱歌手，將在下個月發行單曲。</p>
+<h2>告示牌200榜新成績：男團BOYNEXTDOOR第三張迷你專輯奪下第40位</h2>
+<p>根據公告，男團BOYNEXTDOOR的第三張迷你專輯《19.99》登上了告示牌200榜第40位，取得了該樂隊在主專輯榜上的最高排名。</p>
+<p>該七首歌曲的專輯於本月早些時候發行，在第一周內銷售超過75萬張，創下該六人樂隊的另一項紀錄。在日本，它登上了Oricon的每日、每周和每周綜合專輯排名榜首。</p>
+<p>12月中旬，該樂隊將首次在亞洲巡演，首站是仁川的兩場演唱會。亞洲巡演將在13個亞洲城市舉行，包括日本的六個城市。</p><h2>GFriend將在出道十周年之際重聚</h2>
+<p>根據最近的報導，韓國女團GFriend將在四年之後重聚。六位成員將在明年一月出道十周年之際，推出尚未宣佈的項目。</p>
+<p>GFriend於2015年出道，發行了一系列熱門歌曲，包括《Glass Bead》、《Me Gustas Tu》、《Rough》和《Navillera》。然而，在2021年與經紀公司的合同到期後，團體活動突然結束。</p>
+<p>後來，成員Eunha、SinB和Eomji重新組成了三人組Viviz，並在2022年發行了首張迷你專輯《Beam of Prism》。自那時起，他們又添加了三張迷你專輯和一首數字單曲。其他成員Yerin和Yoojoo也活躍於獨唱歌手生涯，而Sowon則正在追求演藝事業。</p>
+<p>以下是GFriend的部分熱門歌曲：</p>
+<ul>
+<li>《Glass Bead》</li>
+<li>《Me Gustas Tu》</li>
+<li>《Rough》</li>
+<li>《Navillera》</li>
+<p></ul></p>
+<h2>下月朴载范将发行其第六张专辑</h2>
+<p>朴载范宣佈將於10月8日發行他的第六張錄音室專輯《The One You Wanted》，並將在專輯發行當天舉辦直播，與粉絲聊聊新歌。</p>
+<p>距離上一張專輯《少有人走的路》已經過了五年半的時間，這張新專輯將更加忠實於他對R&B的偏好。</p>
+<p>朴载范上週在唱片公司的YouTube頻道上暗示了新專輯的消息，表示他更注重質量而不是潮流，這樣才能對韓國音樂界做出有意義的貢獻。</p>
+<p>另外，朴载范將於10月2日開始主持一檔饒舌歌手的生存試鏡節目。</p>
+
+<p>資料來源： Korea Herald</p>
